Fixed bugs on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,8 @@
 
 @media (max-width: 768px) {
   .react-flow__handle {
-    width: 20px !important;
-    height: 20px !important;
+    width: 24px !important;
+    height: 24px !important;
   }
 
   #custom-node .custom-node-content select,
